Programming languages and paradigms/Interpreter/examples/bad/main_wrong_type.ho
func main(argc int, argv string) {} // error: func main must have no arguments and no return values